kubernetes/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sre-demo
  labels:
    name: sre-demo
    environment: base
